CS5010 Final Project Initial and Added GUI and necessary lib